WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259379
[ WK2 ] http/wpt/webcodecs/videoFrame-video-element.html is a flaky TEXT failure
https://bugs.webkit.org/show_bug.cgi?id=259379
Summary
[ WK2 ] http/wpt/webcodecs/videoFrame-video-element.html is a flaky TEXT failure
Ben Schwartz
Reported
2023-07-20 17:05:42 PDT
http/wpt/webcodecs/videoFrame-video-element.html This test is a flaky TEXT failure with message "InvalidStateError: Video element has no video frame" on all platforms, WebKit 2. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fwebcodecs%2FvideoFrame-video-element.html
TEXT DIFF: -PASS Test we can construct a VideoFrame from a <video> who just fired onloadeddata. +FAIL Test we can construct a VideoFrame from a <video> who just fired onloadeddata. promise_test: Unhandled rejection with value: object "InvalidStateError: Video element has no video frame" DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Release-AppleSilicon-WK2-Tests/266183@main%20(4100)/http/wpt/webcodecs/videoFrame-video-element-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Schwartz
Comment 1
2023-07-20 17:08:17 PDT
This test seems to have been a flaky failure since it was introduced at this commit:
https://commits.webkit.org/255574@main
. Furthermore, I was able to reproduce this test failure at macOS Ventura Production ToT running the test as follows: run-webkit-tests http/wpt/webcodecs/videoFrame-video-element.html --verbose --iterations 50
Radar WebKit Bug Importer
Comment 2
2023-07-20 17:08:30 PDT
<
rdar://problem/112628818
>
EWS
Comment 3
2023-07-20 17:24:55 PDT
Test gardening commit
266194@main
(d7b781161156): <
https://commits.webkit.org/266194@main
> Reviewed commits have been landed. Closing PR #15965 and removing active labels.
Ben Schwartz
Comment 4
2023-07-20 17:32:35 PDT
(In reply to Ben Schwartz from
comment #1
)
> This test seems to have been a flaky failure since it was introduced at this > commit:
https://commits.webkit.org/255574@main
. > > Furthermore, I was able to reproduce this test failure at macOS Ventura > Production ToT running the test as follows: > > run-webkit-tests http/wpt/webcodecs/videoFrame-video-element.html --verbose > --iterations 50
Typo in link, I actually meant this commit:
https://commits.webkit.org/265574@main
youenn fablet
Comment 5
2023-07-21 01:10:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15974
Ben Schwartz
Comment 6
2023-09-22 13:58:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18101
EWS
Comment 7
2023-09-22 15:55:08 PDT
Committed
268339@main
(1d29e0e09edc): <
https://commits.webkit.org/268339@main
> Reviewed commits have been landed. Closing PR #15974 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug